--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,15 +1,17 @@
 <h2 class="text-center">{{userData.name}}'s Dashboard</h2>
 <div class="container-fluid m-2">
-    <h3 >Create Blog</h3>
-    <form>
+    <button id="toggleCreate" class="btn btn-dark">Create Blog</button>
+    
+    <form id="formBlog" style="display: none;">
         <div class="form-group">
-            <label for="exampleFormControlInput1">Title</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Title">
+            <label for="title">Title</label>
+            <input type="title" class="form-control" id="blogTitle" placeholder="Title">
         </div>
         <div class="form-group">
             <label for="exampleFormControlTextarea1">Description</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <textarea class="form-control" id="blogText" rows="3"></textarea>
         </div>
+        <button id="create" class="btn btn-dark">Post</button>
     </form>
 </div>
 
@@ -23,8 +25,15 @@
     </a>
   <div class="card-body">
     <p class="card-text">{{description}}</p>
-    <button class="btn btn-dark">Edit</button>
-    <button class="btn btn-dark">Delete</button>
+    <button id="edit" class="btn btn-dark" data="{{id}}">Edit</button>
+    <button id="delete" class="btn btn-dark" data="{{id}}">Delete</button>
+    <form id="editForm" style="display: none;">
+    <div class="form-group">
+        <label for="edit">Edit</label>
+        <textarea class="form-control" id="editText" rows="3"></textarea>
+    </div>
+    <button id="submitEdit" type="submit" class="btn btn-primary" data="{{id}}">Submit</button>
+  </form>
   </div>
 </div>
 {{/each}}
