fix style color

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -32,7 +32,7 @@
         <label for="edit">Edit</label>
         <textarea class="form-control" id="editText" rows="3"></textarea>
     </div>
-    <button id="submitEdit" type="submit" class="btn btn-primary" data="{{id}}">Submit</button>
+    <button id="submitEdit" type="submit" class="btn btn-dark" data="{{id}}">Submit</button>
   </form>
   </div>
 </div>
