fix broken link in sign up

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -10,7 +10,7 @@
     <input class="form-input" type="password" id="password-custom" />
   </div>
   <div class="form-group mb-3">
-    <button class="btn btn-primary" type="submit">Sign Up</button>
+    <button class="btn btn-primary" type="submit" href="/dashboard">Sign Up</button>
   </div>
 </form>
 <div>
