add auto fill for editing blog post

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -30,7 +30,7 @@
     <form id="editForm" style="display: none;">
     <div class="form-group">
         <label for="edit">Edit</label>
-        <textarea class="form-control" id="editText" rows="3"></textarea>
+        <textarea class="form-control" id="editText" rows="3">{{description}}</textarea>
     </div>
     <button id="submitEdit" type="submit" class="btn btn-dark" data="{{id}}">Submit</button>
   </form>
